@@ -43,26 +43,28 @@ TSDUCK_SOURCE;
 //  Command line options
 //-----------------------------------------------------------------------------
 
-static const size_t MIN_TS_BUFFER_SIZE     = 1024;             // 1 kB
-static const size_t DEFAULT_TS_BUFFER_SIZE = 4 * 1024 * 1024;  // 4 MB
-static const size_t MAX_TS_BUFFER_SIZE     = 16 * 1024 * 1024; // 16 MB
+static const size_t   MIN_TS_BUFFER_SIZE     = 1024;             // 1 kB
+static const size_t   DEFAULT_TS_BUFFER_SIZE = 4 * 1024 * 1024;  // 4 MB
+static const size_t   MAX_TS_BUFFER_SIZE     = 16 * 1024 * 1024; // 16 MB
+static const uint64_t DEFAULT_MIN_INTERVAL   = 100;              // milliseconds
 
 struct Options: public ts::Args
 {
     Options(int argc, char *argv[]);
 
-    ts::BitRate       target_bitrate;
-    ts::PID           reference_pid;
-    size_t            buffer_size;
-    ts::PacketCounter leading_packets;
-    ts::PacketCounter trailing_packets;
-    ts::PacketCounter final_inter_packet;
-    ts::PacketCounter initial_inter_packet;
-    bool              dts_based;
-    bool              dyn_final_inter_packet;
-    bool              dyn_initial_inter_packet;
-    ts::UString       input_file;
-    ts::UString       output_file;
+    ts::BitRate target_bitrate;
+    ts::PID     reference_pid;
+    size_t      buffer_size;
+    uint64_t    leading_packets;
+    uint64_t    trailing_packets;
+    uint64_t    final_inter_packet;
+    uint64_t    initial_inter_packet;
+    uint64_t    min_interval_ms;
+    bool        dts_based;
+    bool        dyn_final_inter_packet;
+    bool        dyn_initial_inter_packet;
+    ts::UString input_file;
+    ts::UString output_file;
 };
 
 // Constructor
@@ -75,6 +77,7 @@ Options::Options(int argc, char *argv[]) :
     trailing_packets(0),
     final_inter_packet(0),
     initial_inter_packet(0),
+    min_interval_ms(0),
     dts_based(false),
     dyn_final_inter_packet(false),
     dyn_initial_inter_packet(false),
@@ -119,6 +122,12 @@ Options::Options(int argc, char *argv[]) :
          u"Number of consecutive stuffing packets to add at the beginning of the "
          u"output file, before the first input packet. The default is zero.");
 
+    option(u"min-interval", 'm', POSITIVE);
+    help(u"min-interval",
+         u"Minimum interval, in milli-seconds, between two recomputations of the "
+         u"amount of stuffing to insert. This duration is based on time-stamps, "
+         u"not real time. The default is " + ts::UString::Decimal(DEFAULT_MIN_INTERVAL) + u" ms.");
+
     option(u"output-file", 'o', STRING);
     help(u"output-file", u"filename",
          u"Output file name (standard output by default). The output file is a TS "
@@ -147,10 +156,11 @@ Options::Options(int argc, char *argv[]) :
     buffer_size = intValue<size_t>(u"buffer-size", DEFAULT_TS_BUFFER_SIZE);
     dts_based = present(u"dts-based");
     reference_pid = intValue<ts::PID>(u"reference-pid", ts::PID_NULL);
-    final_inter_packet = intValue<ts::PacketCounter>(u"final-inter-packet", 0);
-    initial_inter_packet = intValue<ts::PacketCounter>(u"initial-inter-packet", 0);
-    leading_packets = intValue<ts::PacketCounter>(u"leading-packets", 0);
-    trailing_packets = intValue<ts::PacketCounter>(u"trailing-packets", 0);
+    final_inter_packet = intValue<uint64_t>(u"final-inter-packet", 0);
+    initial_inter_packet = intValue<uint64_t>(u"initial-inter-packet", 0);
+    leading_packets = intValue<uint64_t>(u"leading-packets", 0);
+    trailing_packets = intValue<uint64_t>(u"trailing-packets", 0);
+    min_interval_ms = intValue<uint64_t>(u"min-interval", DEFAULT_MIN_INTERVAL);
     dyn_final_inter_packet = !present(u"final-inter-packet");
     dyn_initial_inter_packet = !present(u"initial-inter-packet");
 
@@ -165,10 +175,10 @@ Options::Options(int argc, char *argv[]) :
 struct TimeStamp
 {
     uint64_t          tstamp;  // Time stamp in PCR units
-    ts::PacketCounter packet;  // Packet index in input file
+    uint64_t packet;  // Packet index in input file
 
     // Constructor
-    TimeStamp(uint64_t t = 0, ts::PacketCounter p = 0) : tstamp(t), packet(p) {}
+    TimeStamp(uint64_t t = 0, uint64_t p = 0) : tstamp(t), packet(p) {}
 };
 
 
@@ -188,14 +198,15 @@ public:
 
 private:
     // Private members
-    Options&                _opt;
-    ts::TSFileInputBuffered _input;
-    ts::TSFileOutput        _output;
-    ts::PacketCounter       _current_inter_packet;
-    ts::PacketCounter       _remaining_stuff_count;
-    ts::PacketCounter       _additional_bits;
-    ts::Variable<TimeStamp> _tstamp1;
-    ts::Variable<TimeStamp> _tstamp2;
+    Options&                _opt;                     // Command-line options.
+    ts::TSFileInputBuffered _input;                   // Input file, including seek buffer for at least one segment.
+    ts::TSFileOutput        _output;                  // Output file.
+    ts::Variable<TimeStamp> _tstamp1;                 // First time-stamp in current segment.
+    ts::Variable<TimeStamp> _tstamp2;                 // Second time-stamp in current segment.
+    uint64_t                _current_inter_packet;    // Number of null packets to add between all input packets in segment.
+    uint64_t                _current_residue_packets; // Packets to add to inter_packets.
+    uint64_t                _remaining_stuff_count;   // Remaining number of stuffing packets to add before end of segment.
+    uint64_t                _additional_bits;         // Additional bits (less than one packet) to add in next segment.
 
     // Abort processing (invoked on fatal error, when message already reported)
     void fatalError();
@@ -207,13 +218,14 @@ private:
     bool getTimeStamp(const ts::TSPacket& pkt, uint64_t& tstamp) const;
 
     // Evaluate stuffing need in next segment, between two time stamps.
+    // Compute _current_inter_packet, _remaining_stuff_count, _additional_bits.
     void evaluateNextStuffing();
 
     // Write the specified number of stuffing packets
-    void writeStuffing(ts::PacketCounter stuffing_packet_count);
+    void writeStuffing(uint64_t stuffing_packet_count);
 
     // Read input up to end_packet and perform simple inter-packet stuffing.
-    void simpleInterPacketStuffing(ts::PacketCounter inter_packet, ts::PacketCounter end_packet);
+    void simpleInterPacketStuffing(uint64_t inter_packet, uint64_t end_packet);
 };
 
 
@@ -225,11 +237,12 @@ Stuffer::Stuffer(Options& opt) :
     _opt(opt),
     _input(opt.buffer_size / ts::PKT_SIZE),
     _output(),
-    _current_inter_packet(0),
-    _remaining_stuff_count(0),
-    _additional_bits(0),
     _tstamp1(),
-    _tstamp2()
+    _tstamp2(),
+    _current_inter_packet(0),
+    _current_residue_packets(0),
+    _remaining_stuff_count(0),
+    _additional_bits(0)
 {
 }
 
@@ -271,7 +284,7 @@ bool Stuffer::getTimeStamp(const ts::TSPacket& pkt, uint64_t& tstamp) const
 // Write the specified number of stuffing packets
 //-----------------------------------------------------------------------------
 
-void Stuffer::writeStuffing(ts::PacketCounter count)
+void Stuffer::writeStuffing(uint64_t count)
 {
     while (count > 0) {
         if (!_output.write(&ts::NullPacket, 1, _opt)) {
@@ -286,16 +299,16 @@ void Stuffer::writeStuffing(ts::PacketCounter count)
 // Read input up to end_packet and perform simple inter-packet stuffing.
 //-----------------------------------------------------------------------------
 
-void Stuffer::simpleInterPacketStuffing(ts::PacketCounter inter_packet, ts::PacketCounter end_packet)
+void Stuffer::simpleInterPacketStuffing(uint64_t inter_packet, uint64_t end_packet)
 {
-    assert (_input.getPacketCount() < end_packet);
+    assert(_input.getPacketCount() < end_packet);
 
     ts::TSPacket pkt;
-    while (_input.getPacketCount() < end_packet && _input.read (&pkt, 1, _opt) == 1) {
-        if (!_output.write (&pkt, 1, _opt)) {
+    while (_input.getPacketCount() < end_packet && _input.read(&pkt, 1, _opt) == 1) {
+        if (!_output.write(&pkt, 1, _opt)) {
             fatalError();
         }
-        writeStuffing (inter_packet);
+        writeStuffing(inter_packet);
     }
 }
 
@@ -315,10 +328,10 @@ void Stuffer::evaluateNextStuffing()
     _tstamp2.reset();
 
     // Read packets until both _tstamp1 and _tstamp2 are set (or end of file)
-    uint64_t tstamp;
     ts::TSPacket pkt;
-    while (!_tstamp2.set() && _input.canSeek (initial_position) && _input.read (&pkt, 1, _opt) == 1) {
-        if (getTimeStamp (pkt, tstamp)) {
+    while (!_tstamp2.set() && _input.canSeek(initial_position) && _input.read(&pkt, 1, _opt) == 1) {
+        uint64_t tstamp = 0;
+        if (getTimeStamp(pkt, tstamp)) {
             if (_opt.reference_pid == ts::PID_NULL) {
                 // Found the first time stamp, use this PID as reference
                 _opt.reference_pid = pkt.getPID();
@@ -329,15 +342,15 @@ void Stuffer::evaluateNextStuffing()
                 continue;
             }
             const TimeStamp time_stamp(tstamp, _input.getPacketCount());
-            if (!_tstamp1.set() || tstamp <= _tstamp1.value().tstamp) {
+            if (!_tstamp1.set() || tstamp < _tstamp1.value().tstamp) {
                 // 1) Found the first time stamp in the file.
                 // 2) Or found a time stamp lower than tstamp1, may be because of a
                 //    file rewind or wrapping at 2**42. Use new time stamp as first.
                 _tstamp1 = time_stamp;
                 _opt.debug(u"evaluateNextStuffing: tstamp1 = %'d at %'d", {time_stamp.tstamp, time_stamp.packet});
             }
-            else {
-                // Found second time stamp
+            else if (((tstamp - _tstamp1.value().tstamp) * 1000) / ts::SYSTEM_CLOCK_FREQ >= _opt.min_interval_ms) {
+                // Found second time stamp (with a sufficiently large interval from first time stamp).
                 _tstamp2 = time_stamp;
                 _opt.debug(u"evaluateNextStuffing: tstamp2 = %'d at %'d", {time_stamp.tstamp, time_stamp.packet});
             }
@@ -345,7 +358,7 @@ void Stuffer::evaluateNextStuffing()
     }
 
     // If _tstamp2 not set in first segment or after buffer full, we cannot perform bitrate evaluation
-    if (!_tstamp2.set() && (initial_position == 0 || !_input.canSeek (initial_position))) {
+    if (!_tstamp2.set() && (initial_position == 0 || !_input.canSeek(initial_position))) {
         ts::UString msg(u"no " + getTimeStampType() + u" found");
         if (initial_position > 0) {
             msg += ts::UString::Format(u" after packet %'d", {initial_position});
@@ -364,35 +377,50 @@ void Stuffer::evaluateNextStuffing()
         fatalError();
     }
 
-    // If _tstamp2 is not set, we reached the end of file, keep previous settings.
-    // Otherwise, compute new settings.
     if (_tstamp2.set()) {
+        // The segment is defined by the two time stamps. Compute new settings.
         assert(_tstamp1.set());
         assert(_tstamp1.value().tstamp < _tstamp2.value().tstamp);
         assert(_tstamp1.value().packet < _tstamp2.value().packet);
 
-        // Target number of bits between the two time stamps, plus the previously unstuffed bits
-        const ts::PacketCounter target_bits = _additional_bits +
-            (ts::PacketCounter(_opt.target_bitrate) * (_tstamp2.value().tstamp - _tstamp1.value().tstamp)) / ts::SYSTEM_CLOCK_FREQ;
+        // Segment duration in PCR unit:
+        const uint64_t duration = _tstamp2.value().tstamp - _tstamp1.value().tstamp;
 
-        // Target number of packets between the two time stamps
-        const ts::PacketCounter target_count = target_bits / (8 * ts::PKT_SIZE);
+        // Actual number of input packets in the segment and corresponding bitrate.
+        const uint64_t input_packets = _tstamp2.value().packet - _tstamp1.value().packet;
+        const uint64_t input_bitrate = (input_packets * 8 * ts::PKT_SIZE * ts::SYSTEM_CLOCK_FREQ) / duration;
+        _opt.debug(u"segment: %'d ms, %'d packets, %'d b/s", {(duration * 1000) / ts::SYSTEM_CLOCK_FREQ, input_packets, input_bitrate});
 
-        // Actual number of packets between the two time stamps in the input file
-        const ts::PacketCounter input_count = _tstamp2.value().packet - _tstamp1.value().packet;
+        // Target output number of bits in segment, plus the previously unstuffed bits (less than one packet).
+        const uint64_t target_bits = _additional_bits + (_opt.target_bitrate * duration) / ts::SYSTEM_CLOCK_FREQ;
+
+        // Target output number of packets in the segment.
+        const uint64_t target_packets = target_bits / (8 * ts::PKT_SIZE);
 
         // Compute number of stuffing packets to add
-        if (input_count > target_count) {
-            _opt.warning(u"input bitrate higher than target bitrate, cannot stuff");
+        if (input_packets > target_packets) {
+            // Input burst greater than target bitrate.
+            _opt.warning(u"input bitrate locally higher (%'d b/s) than target bitrate, cannot stuff", {input_bitrate});
             _remaining_stuff_count = 0;
             _current_inter_packet = 0;
+            _current_residue_packets = 0;
             _additional_bits = 0;
         }
         else {
-            _remaining_stuff_count = target_count - input_count;
-            _current_inter_packet = _remaining_stuff_count / input_count;
+            _remaining_stuff_count = target_packets - input_packets;
+            _current_inter_packet = _remaining_stuff_count / input_packets;
+            _current_residue_packets = _remaining_stuff_count % input_packets;
             _additional_bits = target_bits % (8 * ts::PKT_SIZE);
         }
+    }
+    else {
+        // _tstamp2 is not set, we reached the end of file, keep previous settings.
+        // Keep same inter-packet stuffing but erase fine tuning values.
+        // This means that we do not do anything if the new bitrate is not at least
+        // the double of the input one.
+        _remaining_stuff_count = 0;
+        _current_residue_packets = 0;
+        _additional_bits = 0;
     }
 }
 
@@ -435,16 +463,22 @@ void Stuffer::stuff()
     while (_tstamp2.set()) {
         assert(_input.getPacketCount() < _tstamp2.value().packet);
 
-        // Perform stuffing on current segment.
+        // Perform stuffing on current segment, loop on input packets, one by one.
         ts::TSPacket pkt;
         while (_input.getPacketCount() < _tstamp2.value().packet && _input.read(&pkt, 1, _opt) == 1) {
+            // Write the input packet.
             if (!_output.write(&pkt, 1, _opt)) {
                 fatalError();
             }
-            const ts::PacketCounter count = std::min(_current_inter_packet, _remaining_stuff_count);
+            // Write stuffing packets after each input packet.
+            const uint64_t residue = _current_residue_packets > 0 ? 1 : 0;
+            const uint64_t count = std::min(_current_inter_packet + residue, _remaining_stuff_count);
             writeStuffing(count);
             _remaining_stuff_count -= count;
+            _current_residue_packets -= residue;
         }
+
+        // Optionally write a burst of null packets at the end of segment.
         writeStuffing(_remaining_stuff_count);
         _remaining_stuff_count = 0;
 
@@ -453,10 +487,10 @@ void Stuffer::stuff()
     }
 
     // Perform final stuffing, up to end of file
-    simpleInterPacketStuffing(_opt.dyn_final_inter_packet ? _current_inter_packet : _opt.final_inter_packet, std::numeric_limits<ts::PacketCounter>::max());
+    simpleInterPacketStuffing(_opt.dyn_final_inter_packet ? _current_inter_packet : _opt.final_inter_packet, std::numeric_limits<uint64_t>::max());
 
     // Write trailing stuffing packets
-    writeStuffing(_opt.leading_packets);
+    writeStuffing(_opt.trailing_packets);
 
     _opt.verbose(u"stuffing completed, read %'d packets, written %'d packets", {_input.getPacketCount(), _output.getPacketCount()});
 
